# UNICESUMAR-Python-Avancado

./: IBOVDia_18-06-24.csv  ProgramacaoFuncional.ipynb  README.md  app.py  banco.db  bibliotecas.ipynb  cardio.json  notebook.ipynb  pyproject.toml
