[tool.poetry]
name = "unicesumar-python-avancado"
version = "0.1.0"
description = ""
authors = ["Diego Neves <pdcassiano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
selenium = "^4.21.0"
yfinance = "^0.2.40"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
